# adts

./: LICENSE  README.md  pyproject.toml
src/adt/: __init__.py
tests/: test_adt.py  test_option.py  test_tree.py
