[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "adt"
authors = [{name = "Tin Tvrtkovic", email = "tinchester@gmail.com"}]
classifiers = ["License :: OSI Approved :: Python Software Foundation License"]
dynamic = ["description"]
version = "22.0.1"

[project.urls]
Home = "https://github.com/tinche/adt"

[tool.isort]
profile = "attrs"